<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.manageWord.WordDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Word Details"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

<!--    BUTTONS SECTION-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/s"
        android:layout_marginHorizontal="@dimen/xxl"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbDone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:text="@string/done"
            app:cornerRadius="@dimen/s" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbUpdate"
            android:layout_width="wrap_content"
            android:text="@string/update"
            android:layout_height="40dp"
            app:cornerRadius="@dimen/s"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/delete"
            app:cornerRadius="@dimen/s"
            android:backgroundTint="@color/red"
            />
    </LinearLayout>

<!--    CONTENT SECTION-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxxl"
        android:orientation="vertical"
        android:padding="@dimen/s"
        >
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/tx_xxl"
            android:layout_marginBottom="@dimen/xl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/s"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meaning"
                android:textSize="@dimen/tx_xxl"
                />
            <TextView
                android:id="@+id/tvMeaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampletext"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/s"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synonym"
                android:textSize="@dimen/tx_xxl"
                />
            <TextView
                android:id="@+id/tvSyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampletext"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/s"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="@dimen/tx_xxl"
                />
            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exampletext"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>